Correct docs about multiarch and v9. Closes: #630826

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -549,10 +549,7 @@ Changes from v8 are:
 =item - 
 
 Multiarch support. In particular, B<dh_auto_configure> passes
-multiarch directories to autoconf in --libdir and --libexecdir,
-while B<dh_makeshlibs> detects packages containing multiarch
-directories and sets a Pre-Dependency on multiarch-support in
-${misc:Pre-Depends}
+multiarch directories to autoconf in --libdir and --libexecdir.
 
 =item -
 
