--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ debhelper (8.1.7) UNRELEASED; urgency=low
     Closes: #544844
   * Also, support DEB_BUILD_OPTIONS=noopt, by changing -O2 to -O0
     in any variables listed by dpkg-buildflags.
+  * Correct docs about multiarch and v9. Closes: #630826
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
 
