--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,9 @@ debhelper (8.1.7) UNRELEASED; urgency=low
     in --libexecdir when using autoconf. Closes: #541458
   * dh_auto_build, dh_auto_configure, dh: Set environment variables
     listed by dpkg-buildflags --export. Any environment variables that
-    are already set to other values will not be changed.
+    are already set to other values will not be changed unless
+    appropriate DEB_${flag}_{APPEND,SET} environment variables are also
+    set (see dpkg-buildflags(1)).
     Closes: #544844
   * Correct docs about multiarch and v9. Closes: #630826
 
