Revert "Always respect DEB_${flag}_{APPEND,SET} envvars."
This reverts commit fcfcd1298f6ea1fcfb2b2b5a529303270aa800d9.

Per Raphael's mail.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,9 +9,7 @@ debhelper (8.1.7) UNRELEASED; urgency=low
     in --libexecdir when using autoconf. Closes: #541458
   * dh_auto_build, dh_auto_configure, dh: Set environment variables
     listed by dpkg-buildflags --export. Any environment variables that
-    are already set to other values will not be changed unless
-    appropriate DEB_${flag}_{APPEND,SET} environment variables are also
-    set (see dpkg-buildflags(1)).
+    are already set to other values will not be changed.
     Closes: #544844
   * dh_movefiles: Optimise use of xargs. Closes: #627737
   * Correct docs about multiarch and v9. Closes: #630826
