--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.1.7) UNRELEASED; urgency=low
+debhelper (8.9.0) unstable; urgency=low
 
   * dh: In v9, any standard rules file targets, including build-arch,
     build-indep, build, install, etc, can be defined in debian/rules
@@ -18,7 +18,7 @@ debhelper (8.1.7) UNRELEASED; urgency=low
   * dh_auto_configure: If there is a problem with cmake, display
     the CMakeCache.txt.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 24 Jun 2011 14:28:52 -0400
 
 debhelper (8.1.6) unstable; urgency=low
 
