Typo fixes. Closes: #632662

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -305,7 +305,7 @@ some other packages. For example, if you use L<dh_installdebconf(1)>, your
 package will generally need to depend on debconf. Or if you use
 L<dh_installxfonts(1)>, your package will generally need to depend on a
 particular version of xutils. Keeping track of these miscellaneous
-dependencies can be annoying since they are dependant on how debhelper does
+dependencies can be annoying since they are dependent on how debhelper does
 things, so debhelper offers a way to automate it.
 
 All commands of this type, besides documenting what dependencies may be
@@ -540,7 +540,7 @@ B<dh_auto_>I<*> prefer to use Perl's B<Module::Build> in preference to F<Makefil
 
 =item v9
 
-This compatability level is still open for development; use with caution.
+This compatibility level is still open for development; use with caution.
 
 Changes from v8 are:
 
