--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.1) UNRELEASED; urgency=low
+
+  * Typo fixes. Closes: #632662
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
+
 debhelper (8.9.0) unstable; urgency=low
 
   * dh: In v9, any standard rules file targets, including build-arch,
