--- a/debhelper.pod
+++ b/debhelper.pod
@@ -558,7 +558,7 @@ to manually define the dependencies between targets there.
 
 =item -
 
-<dh_auto_configure> does not include the source package name
+B<dh_auto_configure> does not include the source package name
 in --libexecdir when using autoconf.
 
 =back
