dh: In v9, do not enable any python support commands.
dh_pysupport has started emitting a deprecation warning, which is
very annoying since it clutters every build that uses dh -- even builds
where it doesn't do anything. Since there is not just a dh_python2, but
also a dh_python3 waiting in the wings, this is clearly too volatile
a situation for dh to try to support further.

I considered making dh_python detect and run the right dh_python[23] helper
-- a python helper helper as it were -- but 70-odd packages still use that
command.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -561,6 +561,10 @@ to manually define the dependencies between targets there.
 B<dh_auto_configure> does not include the source package name
 in --libexecdir when using autoconf.
 
+=item -
+
+B<dh> does not default to enabling --with=python-support
+
 =back
 
 =back
