add bug closure

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (8.9.1) UNRELEASED; urgency=low
 
   * Typo fixes. Closes: #632662
-  * dh: In v9, do not enable any python support commands.
+  * dh: In v9, do not enable any python support commands. Closes: #634106
 
  -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
 
