Now the QT4 version of qmake can be explicitly selected by passing --buildsystem=qmake_qt4. Closes: #566840
There is that build system option patch that I suckily never applied,
and could be used here.. but this is at its core a different build system,
and so handling it as such makes the most sense.

It may make sense to have a qmake_qt3 build system, but perhaps QT 3
will instead just go away. I considered just waiting, but this is an easy
fix. ;)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (8.9.1) UNRELEASED; urgency=low
 
   * Typo fixes. Closes: #632662
   * dh: In v9, do not enable any python support commands. Closes: #634106
+  * Now the QT4 version of qmake can be explicitly selected by passing
+    --buildsystem=qmake_qt4. Closes: #566840
 
  -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
 
