--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debhelper (8.9.1) UNRELEASED; urgency=low
   * Now the QT4 version of qmake can be explicitly selected by passing
     --buildsystem=qmake_qt4. Closes: #566840
   * Remove debhelper.log in compat level 1. Closes: #634155
+  * dh_builddeb: Build in parallel when allowed by DEB_BUILD_OPTIONS.
+    Closes: #589427 (Thanks, Gergely Nagy and Kari Pahula)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
 
