--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.9.1) UNRELEASED; urgency=low
+debhelper (8.9.1) unstable; urgency=low
 
   * Typo fixes. Closes: #632662
   * dh: In v9, do not enable any python support commands. Closes: #634106
@@ -8,7 +8,7 @@ debhelper (8.9.1) UNRELEASED; urgency=low
   * dh_builddeb: Build in parallel when allowed by DEB_BUILD_OPTIONS.
     Closes: #589427 (Thanks, Gergely Nagy and Kari Pahula)
 
- -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 17 Jul 2011 16:31:27 -0400
 
 debhelper (8.9.0) unstable; urgency=low
 
