Support make 3.82. Closes: #634385

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.2) UNRELEASED; urgency=low
+
+  * Support make 3.82. Closes: #634385
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Jul 2011 17:52:55 -0400
+
 debhelper (8.9.1) unstable; urgency=low
 
   * Typo fixes. Closes: #632662
