--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (8.9.2) UNRELEASED; urgency=low
+debhelper (8.9.2) unstable; urgency=low
 
-  * Support make 3.82. Closes: #634385
+  * dh: Support make 3.82. Closes: #634385
 
- -- Joey Hess <joeyh@debian.org>  Mon, 18 Jul 2011 17:52:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Jul 2011 17:55:24 -0400
 
 debhelper (8.9.1) unstable; urgency=low
 
