--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (8.9.3) UNRELEASED; urgency=low
+
+  * dh: Remove obsolete optimisation hack that caused sequence breakage
+    in v9 with a rules file with an explict build target. Closes: #634784
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 22:29:43 -0400
+
 debhelper (8.9.2) unstable; urgency=low
 
   * dh: Support make 3.82. Closes: #634385
