doc tweak re target dependencies
If a rules file has a custom install or binary target, those targets
still need to explicitly depend on the build target. Unless dh is used
in such a target (which it probably is of course).

It's not possible to avoid the need for those dependencies. A rules file
with a hand-written binary target simply does not run dh, so dh can
do nothing to help it run the build target.

Reword the docs to not give the wrong impression that dh somehow
magically makes that work.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -476,8 +476,9 @@ multiarch directories to autoconf in --libdir and --libexecdir.
 
 =item -
 
-dh supports use of standard targets in debian/rules without needing
-to manually define the dependencies between targets there.
+dh allows defining custom build, build-arch, and build-indep targets
+in debian/rules, without needing to manually define the other targets
+that depend on them.
 
 =item -
 
