--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (8.9.3) UNRELEASED; urgency=low
+debhelper (8.9.3) unstable; urgency=low
 
   * dh: Remove obsolete optimisation hack that caused sequence breakage
     in v9 with a rules file with an explict build target. Closes: #634784
 
- -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 22:29:43 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 23:26:43 -0400
 
 debhelper (8.9.2) unstable; urgency=low
 
