dh: The --before --after --until and --remaining options are deprecated. Use override targets instead.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (8.9.4) UNRELEASED; urgency=low
+
+  * dh: The --before --after --until and --remaining options are deprecated.
+    Use override targets instead.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 05 Aug 2011 10:58:36 -0400
+
 debhelper (8.9.3) unstable; urgency=low
 
   * dh: Remove obsolete optimisation hack that caused sequence breakage
