--- a/doc/TODO
+++ b/doc/TODO
@@ -21,7 +21,7 @@ Deprecated:
 * delsubstvar() and the last parameter to addsubstvar that makes it remove
   a string are not used in debhelper itself, but have been left in the
   library in case other things use them. Deprecate and remove.
-* dh --before , --after , --until , --remaining (not formally deprecated yet)
+* dh --before , --after , --until , --remaining
 * debian/compress files
 * deprecate dh_gconf for dh_installgsettings (stuff should be migrating
   away from gconf, and then I can just remove it -- have not added warning
