--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ debhelper (8.9.4) UNRELEASED; urgency=low
 
   * dh: The --before --after --until and --remaining options are deprecated.
     Use override targets instead.
+  * Assume that the package can be cleaned (i.e. the build directory can be
+    removed) as long as it is built out-of-source tree and can be configured.
+    This is useful for derivative buildsystems which generate Makefiles.
+    (Modestas Vainius) Closes: #601590
 
  -- Joey Hess <joeyh@debian.org>  Fri, 05 Aug 2011 10:58:36 -0400
 
