--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (8.9.4) UNRELEASED; urgency=low
     removed) as long as it is built out-of-source tree and can be configured.
     This is useful for derivative buildsystems which generate Makefiles.
     (Modestas Vainius) Closes: #601590
+  * dh_auto_test: Run cmake tests in parallel when allowed by
+    DEB_BUILD_OPTIONS. (Modestas Vainius) Closes: #587885
 
  -- Joey Hess <joeyh@debian.org>  Fri, 05 Aug 2011 10:58:36 -0400
 
