dh_compress: Don't compress _sources documentation subdirectory as used by python-sphinx. Closes: #637492 Thanks, Jakub Wilk

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (8.9.5) UNRELEASED; urgency=low
+
+  * dh_compress: Don't compress _sources documentation subdirectory
+    as used by python-sphinx. Closes: #637492
+    Thanks, Jakub Wilk
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 20 Aug 2011 15:13:01 -0400
+
 debhelper (8.9.4) unstable; urgency=low
 
   * dh: The --before --after --until and --remaining options are deprecated.
