--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-debhelper (8.9.5) UNRELEASED; urgency=low
+debhelper (8.9.5) unstable; urgency=low
 
   * dh_compress: Don't compress _sources documentation subdirectory
     as used by python-sphinx. Closes: #637492
     Thanks, Jakub Wilk
+  * dh_ucf: fix test for ucf/ucfr availability and quote filenames.
+    Closes: #638944
+    Thanks, Jeroen Schot
 
- -- Joey Hess <joeyh@debian.org>  Sat, 20 Aug 2011 15:13:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 23 Aug 2011 13:25:54 -0400
 
 debhelper (8.9.4) unstable; urgency=low
 
