--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (8.9.6) unstable; urgency=low
+
+  * dh_installlogcheck: Add support for --name. Closes: #639020
+    Thanks, Gergely Nagy
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 23 Aug 2011 15:25:55 -0400
+
 debhelper (8.9.5) unstable; urgency=low
 
   * dh_compress: Don't compress _sources documentation subdirectory
