debhelper no longer build-depends on man-db, to ease bootstrapping.
The man page recode is not necessary as the man pages are utf-8 already.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.7) UNRELEASED; urgency=low
+
+  * debhelper no longer build-depends on man-db, to ease bootstrapping.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400
+
 debhelper (8.9.6) unstable; urgency=low
 
   * dh_installlogcheck: Add support for --name. Closes: #639020
