--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ debhelper (8.9.7) UNRELEASED; urgency=low
 
   * dh: Don't bother running dh_shlibdebs, dh_makeshelibs, or dh_strip
     for the binary target when all packages being acted on are indep.
-  * debhelper no longer build-depends on man-db, to ease bootstrapping.
+  * debhelper no longer build-depends on man-db or file, to ease bootstrapping.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400
 
