Remove obsolete versioned dependency on perl-base.
5.10 is in stable, which is good enough for me.

(And this dependency was added for very unclear reasons in the first place.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (8.9.7) UNRELEASED; urgency=low
   * dh: Don't bother running dh_shlibdebs, dh_makeshelibs, or dh_strip
     for the binary target when all packages being acted on are indep.
   * debhelper no longer build-depends on man-db or file, to ease bootstrapping.
+  * Remove obsolete versioned dependency on perl-base.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400
 
