--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (8.9.7) UNRELEASED; urgency=low
 
-  * dh: Don't bother running dh_shlibdebs, dh_makeshelibs, or dh_strip
+  * dh: Don't bother running dh_shlibdebs, dh_makeshlibs, or dh_strip
     for the binary target when all packages being acted on are indep.
   * debhelper no longer build-depends on man-db or file, to ease bootstrapping.
   * Remove obsolete versioned dependency on perl-base.
