dh: Avoid running install sequence a third time in v9 when the rules file has explicit binary-indep and binary-arch targets.
Closes: #639341 Thanks, Yann Dirson for test case.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ debhelper (8.9.7) UNRELEASED; urgency=low
   * Remove obsolete versioned dependency on perl-base.
   * Avoid writing debhelper log files in no-act mode. Closes: #640586
   * Tighten parsing of DEB_BUILD_OPTIONS.
+  * dh: Avoid running install sequence a third time in v9 when the
+    rules file has explicit binary-indep and binary-arch targets.
+    Closes: #639341 Thanks, Yann Dirson for test case.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400
 
