--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (8.9.8) UNRELEASED; urgency=low
+
+  * dh_fixperms: Operate on .ali files throughout /usr/lib, including
+    multiarch dirs. Closes: #641279
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Sep 2011 13:35:52 -0400
+
 debhelper (8.9.7) unstable; urgency=low
 
   * dh: Now you can use override_dh_command-arch and override_dh_command-indep
