dh: Avoid compat deprecation warning before option parsing. Closes: #641361

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (8.9.8) UNRELEASED; urgency=low
 
   * dh_fixperms: Operate on .ali files throughout /usr/lib, including
     multiarch dirs. Closes: #641279
+  * dh: Avoid compat deprecation warning before option parsing.
+    Closes: #641361
 
  -- Joey Hess <joeyh@debian.org>  Mon, 12 Sep 2011 13:35:52 -0400
 
