Clarify description of dh_auto_* -- params. Closes: #642786

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (8.9.8) UNRELEASED; urgency=low
     multiarch dirs. Closes: #641279
   * dh: Avoid compat deprecation warning before option parsing.
     Closes: #641361
+  * Clarify description of dh_auto_* -- params. Closes: #642786
 
  -- Joey Hess <joeyh@debian.org>  Mon, 12 Sep 2011 13:35:52 -0400
 
