Mention in debhelper(7) that buildsystem options are typically passed to dh. Closes: #643069

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -195,6 +195,8 @@ The following command line options are supported by all of the B<dh_auto_>I<*>
 debhelper programs. These programs support a variety of build systems,
 and normally heuristically determine which to use, and how to use them.
 You can use these command line options to override the default behavior.
+Typically these are passed to L<dh(1)>, which then passes them to all the 
+B<dh_auto_>I<*> programs.
 
 =over 4
 
