setting OPTIMIZE could in theory lead to breakage, so make it v9

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (8.9.8) UNRELEASED; urgency=low
   * Clarify description of dh_auto_* -- params. Closes: #642786
   * Mention in debhelper(7) that buildsystem options are typically passed
     to dh. Closes: #643069
+  * perl_makemaker: Pass CFLAGS to Makefile.PL using OPTIMIZE. Closes: #643702
+    (v9 only)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 12 Sep 2011 13:35:52 -0400
 
