--- a/debhelper.pod
+++ b/debhelper.pod
@@ -494,6 +494,11 @@ All of the B<dh_auto_>I<*> debhelper programs and B<dh> set
 environment variables listed by B<dpkg-buildflags>, unless
 they are already set. They support DEB_BUILD_OPTIONS=noopt too.
 
+=item -
+
+B<dh_auto_configure> passes CFLAGS to F<Makefile.PL> using
+the OPTIMIZE variable.
+
 =back
 
 =back
