--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.9.8) UNRELEASED; urgency=low
+debhelper (8.9.8) unstable; urgency=low
 
   * dh_fixperms: Operate on .ali files throughout /usr/lib, including
     multiarch dirs. Closes: #641279
@@ -7,10 +7,10 @@ debhelper (8.9.8) UNRELEASED; urgency=low
   * Clarify description of dh_auto_* -- params. Closes: #642786
   * Mention in debhelper(7) that buildsystem options are typically passed
     to dh. Closes: #643069
-  * perl_makemaker: Pass CFLAGS to Makefile.PL using OPTIMIZE. Closes: #643702
-    (v9 only)
+  * perl_makemaker: In v9, pass CFLAGS to Makefile.PL using OPTIMIZE.
+    Closes: #643702 Thanks, Steve Langasek.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 12 Sep 2011 13:35:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 29 Sep 2011 15:41:16 -0400
 
 debhelper (8.9.7) unstable; urgency=low
 
