--- a/debhelper.pod
+++ b/debhelper.pod
@@ -496,8 +496,8 @@ they are already set. They support DEB_BUILD_OPTIONS=noopt too.
 
 =item -
 
-B<dh_auto_configure> passes CFLAGS to F<Makefile.PL> using
-the OPTIMIZE variable.
+B<dh_auto_configure> passes CFLAGS to perl F<Makefile.PL> and
+F<Build.PL>
 
 =back
 
