--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,8 @@ debhelper (8.9.8) unstable; urgency=low
   * Clarify description of dh_auto_* -- params. Closes: #642786
   * Mention in debhelper(7) that buildsystem options are typically passed
     to dh. Closes: #643069
-  * perl_makemaker: In v9, pass CFLAGS to Makefile.PL using OPTIMIZE.
-    Closes: #643702 Thanks, Steve Langasek.
+  * perl_makemaker: In v9, pass CFLAGS to Makefile.PL and Build.Pl
+    Closes: #643702, #497653 Thanks, Steve Langasek, gregor herrmann.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 29 Sep 2011 15:41:16 -0400
 
