--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (8.9.9) UNRELEASED; urgency=low
+
+  * dh_auto_build: Use target architecture for build directory name.
+    Closes: #644553 Thanks, Tom Hughes
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 06 Oct 2011 19:26:08 -0400
+
 debhelper (8.9.8) unstable; urgency=low
 
   * dh_fixperms: Operate on .ali files throughout /usr/lib, including
