--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (8.9.9) UNRELEASED; urgency=low
 
   * dh_auto_build: Use target architecture for build directory name.
     Closes: #644553 Thanks, Tom Hughes
+  * dh: Add dh_auto_configure parameter example. Closes: #645335
 
  -- Joey Hess <joeyh@debian.org>  Thu, 06 Oct 2011 19:26:08 -0400
 
