--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (8.9.9) UNRELEASED; urgency=low
+debhelper (8.9.9) unstable; urgency=low
 
-  * dh_auto_build: Use target architecture for build directory name.
-    Closes: #644553 Thanks, Tom Hughes
+  * dh_auto_build: Use target architecture (not host architecture) 
+    for build directory name. Closes: #644553 Thanks, Tom Hughes
   * dh: Add dh_auto_configure parameter example. Closes: #645335
 
- -- Joey Hess <joeyh@debian.org>  Thu, 06 Oct 2011 19:26:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 04 Nov 2011 17:01:58 -0400
 
 debhelper (8.9.8) unstable; urgency=low
 
