dh_strip: In v9, pass --compress-debug-sections to objcopy. Needs a new enough binutils and gdb; debhelper backport may need to disable this. Thanks, Aurelien Jarno and Bastien ROUCARIES. Closes: #631985

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -481,6 +481,11 @@ explicit binary target with explicit dependencies on the other targets.
 
 =item -
 
+B<dh_strip> compresses debugging symbol files to reduce the installed
+size of -dbg packages.
+
+=item -
+
 B<dh_auto_configure> does not include the source package name
 in --libexecdir when using autoconf.
 
