--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (8.9.10) UNRELEASED; urgency=low
+
+  * dh_strip: In v9, pass --compress-debug-sections to objcopy.
+    Needs a new enough binutils and gdb; debhelper backport
+    may need to disable this.
+    Thanks, Aurelien Jarno and Bastien ROUCARIES. Closes: #631985
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 07 Nov 2011 13:50:30 -0400
+
 debhelper (8.9.9) unstable; urgency=low
 
   * dh_auto_build: Use target architecture (not host architecture) 
