--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.9.10) UNRELEASED; urgency=low
+debhelper (8.9.10) unstable; urgency=low
 
   * dh_strip: In v9, pass --compress-debug-sections to objcopy.
     Needs a new enough binutils and gdb; debhelper backport
@@ -8,7 +8,7 @@ debhelper (8.9.10) UNRELEASED; urgency=low
     and override_dh_command-indep targets. This is needed when the binary
     target is run, rather than binary-arch/binary-indep. Closes: #648901
 
- -- Joey Hess <joeyh@debian.org>  Mon, 07 Nov 2011 13:50:30 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Nov 2011 11:54:59 -0400
 
 debhelper (8.9.9) unstable; urgency=low
 
