Fix broken option passing to objcopy. Closes: #649044

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.11) UNRELEASED; urgency=low
+
+  * Fix broken option passing to objcopy. Closes: #649044
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 00:15:10 -0400
+
 debhelper (8.9.10) unstable; urgency=low
 
   * dh_strip: In v9, pass --compress-debug-sections to objcopy.
