--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (8.9.11) UNRELEASED; urgency=low
+debhelper (8.9.11) unstable; urgency=low
 
   * Fix broken option passing to objcopy. Closes: #649044
 
- -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 00:15:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 00:15:34 -0400
 
 debhelper (8.9.10) unstable; urgency=low
 
