Typo fixes. Closes: #651224 Thanks, Chris Leick

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.12) UNRELEASED; urgency=low
+
+  * Typo fixes. Closes: #651224 Thanks, Chris Leick
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 06 Dec 2011 17:16:28 -0400
+
 debhelper (8.9.11) unstable; urgency=low
 
   * Fix broken option passing to objcopy. Closes: #649044
