--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -1,6 +1,6 @@
 # debhelper man/po translation to Spanish
 # Copyright (C) 2005 - 2010 Software in the Public Interest
-# This file is distributed under the same license as the deborphan package.
+# This file is distributed under the same license as the debhelper package.
 #
 # Changes:
 #   - Initial translation
