--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (8.9.12) UNRELEASED; urgency=low
 
+  * Added German translation of man pages, done by Chris Leick. Closes: #651221
   * Typo fixes. Closes: #651224 Thanks, Chris Leick
 
  -- Joey Hess <joeyh@debian.org>  Tue, 06 Dec 2011 17:16:28 -0400
