--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -4232,7 +4232,7 @@ msgid ""
 "B<dh_installdocs> [S<I<debhelper options>>] [B<-A>] [B<-X>I<item>] "
 "[S<I<file> ...>]"
 msgstr ""
-"B<dh_installdocs> [S<I<Debhelper-Optionen>] [B<-A>] [B<-X>I<Element>] "
+"B<dh_installdocs> [S<I<Debhelper-Optionen>>] [B<-A>] [B<-X>I<Element>] "
 "[S<I<Datei> …>]"
 
 #. type: textblock
@@ -4708,7 +4708,7 @@ msgstr "dh_installinfo - installiert Info-Dateien"
 #. type: textblock
 #: dh_installinfo:14
 msgid "B<dh_installinfo> [S<I<debhelper options>>] [B<-A>] [S<I<file> ...>]"
-msgstr "B<dh_installinfo> [S<I<Debhelper-Optionen>] [B<-A>] [S<I<Datei> …>]"
+msgstr "B<dh_installinfo> [S<I<Debhelper-Optionen>>] [B<-A>] [S<I<Datei> …>]"
 
 #. type: textblock
 #: dh_installinfo:18
