--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.9.12) UNRELEASED; urgency=low
+debhelper (8.9.12) unstable; urgency=low
 
   * Debhelper config files may be made executable programs that output the
     desired configuration. No further changes are planned to the config file
@@ -9,7 +9,7 @@ debhelper (8.9.12) UNRELEASED; urgency=low
   * Added German translation of man pages, done by Chris Leick. Closes: #651221
   * Typo fixes. Closes: #651224 Thanks, Chris Leick
 
- -- Joey Hess <joeyh@debian.org>  Tue, 06 Dec 2011 17:16:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 07 Dec 2011 15:09:50 -0400
 
 debhelper (8.9.11) unstable; urgency=low
 
