Pass CPPFLAGS to qmake. Closes: #646129 Thanks, Felix Geyert

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.13) UNRELEASED; urgency=low
+
+  * Pass CPPFLAGS to qmake. Closes: #646129 Thanks, Felix Geyert
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 08 Dec 2011 18:27:02 -0400
+
 debhelper (8.9.12) unstable; urgency=low
 
   * Debhelper config files may be made executable programs that output the
