--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (8.9.13) UNRELEASED; urgency=low
 
   * Pass CPPFLAGS to qmake. Closes: #646129 Thanks, Felix Geyert
+  * dh_strip: Use build-id in /usr/lib/debug.
+    Closes: #642158 Thanks, Jakub Wilk
 
  -- Joey Hess <joeyh@debian.org>  Thu, 08 Dec 2011 18:27:02 -0400
 
