--- a/debhelper.pod
+++ b/debhelper.pod
@@ -509,6 +509,11 @@ they are already set. They support DEB_BUILD_OPTIONS=noopt too.
 B<dh_auto_configure> passes CFLAGS to perl F<Makefile.PL> and
 F<Build.PL>
 
+=item -
+
+B<dh_strip> puts separated debug symbols in a location based on their
+build-id.
+
 =back
 
 =back
