--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (8.9.13) UNRELEASED; urgency=low
 
   * Pass CPPFLAGS to qmake. Closes: #646129 Thanks, Felix Geyert
-  * dh_strip: Use build-id in /usr/lib/debug.
+  * dh_strip: Use build-id in /usr/lib/debug in v9.
     Closes: #642158 Thanks, Jakub Wilk
   * Spanish translation update. Closes: #636245 Thanks, Omar Campagne
 
