Only enable executable config files in v9. The quality of file permissions in debian/ directories turns out to be atrocious; who knew?

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -514,6 +514,11 @@ F<Build.PL>
 B<dh_strip> puts separated debug symbols in a location based on their
 build-id.
 
+=item -
+
+Executable debconf config files are run and their output used as the
+configuration.
+
 =back
 
 =back
