--- a/debhelper.pod
+++ b/debhelper.pod
@@ -516,7 +516,7 @@ build-id.
 
 =item -
 
-Executable debconf config files are run and their output used as the
+Executable debhelper config files are run and their output used as the
 configuration.
 
 =back
