--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.14) UNRELEASED; urgency=low
+
+  * Typo. Closes: #653006
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 Dec 2011 15:03:13 -0400
+
 debhelper (8.9.13) unstable; urgency=low
 
   * Pass CPPFLAGS to qmake. Closes: #646129 Thanks, Felix Geyert
