--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (8.9.14) UNRELEASED; urgency=low
 
   * Typo. Closes: #653006
+  * Typo. Closes: #653339
 
  -- Joey Hess <joeyh@debian.org>  Thu, 22 Dec 2011 15:03:13 -0400
 
