--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (8.9.14) UNRELEASED; urgency=low
+debhelper (8.9.14) unstable; urgency=low
 
   * Typo. Closes: #653006
   * Typo. Closes: #653339
 
- -- Joey Hess <joeyh@debian.org>  Thu, 22 Dec 2011 15:03:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 27 Dec 2011 11:53:44 -0400
 
 debhelper (8.9.13) unstable; urgency=low
 
